# ChangeLog for kde-misc/knetworkmanager
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/knetworkmanager/ChangeLog,v 1.23 2011/04/10 16:33:59 tampakrap Exp $

*knetworkmanager-4.4.0_p20110410 (10 Apr 2011)

  10 Apr 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +knetworkmanager-4.4.0_p20110410.ebuild:
  New snapshot

*knetworkmanager-4.4.0_p20110204 (04 Feb 2011)

  04 Feb 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +knetworkmanager-4.4.0_p20110204.ebuild:
  New snapshot

  03 Nov 2010; Markus Meier <maekke@gentoo.org>
  knetworkmanager-4.4.0_p20100820.ebuild:
  x86 stable, bug #340771

  13 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  knetworkmanager-4.4.0_p20100820.ebuild:
  Stable on amd64 wrt bug #340771

*knetworkmanager-4.4.0_p20101012 (12 Oct 2010)

  12 Oct 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  knetworkmanager-4.4.0_p20100820.ebuild,
  +knetworkmanager-4.4.0_p20101012.ebuild:
  New snapshot, cleanup: use add_kdebase_dep, merge with live ebuild, EAPI3

  08 Sep 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  -knetworkmanager-4.4.0_p20100331.ebuild:
  remove old snapshot

*knetworkmanager-4.4.0_p20100820 (20 Aug 2010)

  20 Aug 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +knetworkmanager-4.4.0_p20100820.ebuild:
  New snapshot. I wanted to unmask this version, but first it needs some
  testing (with both KDE 4.4.5 and 4.5.0 for compile and runtime issues), as
  it has a sed to make it compile with KDE 4.4.5
  The sed reverts upstream commit
  http://websvn.kde.org/trunk/extragear/base/networkmanagement/applet/CMakeL
  ists.txt?r1=1164217&r2=1164216&pathrev=1164217

*knetworkmanager-4.4.0_p20100331 (31 Mar 2010)

  31 Mar 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  -knetworkmanager-4.4.0_p20100307.ebuild,
  +knetworkmanager-4.4.0_p20100331.ebuild:
  New snapshot

*knetworkmanager-4.4.0_p20100307 (07 Mar 2010)
