@@ -1,10 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST knetworkmanager-4.4.0_p20100820.tar.bz2 504078 RMD160 6e4824cdcb10cedf0e12372cfba025f94bb5b33b SHA1 55a5d1a5e9c87dc80e1ba8a88f09a4924fbc6a42 SHA256 aaf439494df64045a1c26a0b5d259ccc6f1e38cc8381f2ae599eec4b9f067b13
-DIST knetworkmanager-4.4.0_p20101012.tar.bz2 511788 RMD160 e95375a73d0fca91067c900f9b5e1617dd83551f SHA1 d76e6747b88abb256be14c02b3d4482b520b223e SHA256 8f1fde19d622d6b4757f7155eb84b7ec854fe0c8c8eb3eb0e2b2d160031c4c1f
-DIST knetworkmanager-4.4.0_p20110204.tar.bz2 517842 RMD160 3a7c3835be7103ad6dc4f67ff4d03c9592153e8b SHA1 6f04aa4cca38b909f1bbafe89ea92791a75994f6 SHA256 554a4b06d30c321e0246dd12c66f5a2c28f0ea2bf3c182762ec368f4eb848812
-DIST knetworkmanager-4.4.0_p20110410.tar.bz2 530485 RMD160 ed0485a97fb93d63fae5ab4dda79619e6ab8250f SHA1 871c29f8d1dceb24846a8d308f348e8b9edd01ba SHA256 a1f63caa184c9c27117896ce82d46ee1149ca354dc506f411b1e8c583ac9b731
+DIST knetworkmanager-4.4.0_p20110415.tar.xz 484832 RMD160 0d2437f8c2bb606254246f33269f9ce4abb68f4e SHA1 f0bf02e03daf3ccfc72d455b821b6a54c924af27 SHA256 1600c961e4745b5a92f46ffa79ca3162ac39917cdabb831e1325b52982bba89d
 EBUILD knetworkmanager-4.4.0_p20100820.ebuild 1285 RMD160 994bd54e91a7cef2ed6e7636482096879e49b2bc SHA1 6860e1a87886911666962208bf0e152ba159635e SHA256 bca5e1786b2422bb2869cb9d2390eab85ea78fc413709948c7930a7f8eb32563
-EBUILD knetworkmanager-4.4.0_p20101012.ebuild 1198 RMD160 89f7e74148c68a76f2acd2897bcbbc7492bfb070 SHA1 830a6b295dd530ea15564840f36c9c8fd619ea08 SHA256 18a263c853d7576ceb4fc3085a58a502fe9a5c0d2274cf6719a7d466ab409a5a
-EBUILD knetworkmanager-4.4.0_p20110204.ebuild 1224 RMD160 5ef812a47d7aee111e0057c4c3f77943beca3a8c SHA1 d211e8308f5c7e8e214882de3e0f8d13281333a9 SHA256 0c74bd27293b1b60eb6bc49d4fa13b7c68ea7f97518714d8fed12ff85dad33a3
-EBUILD knetworkmanager-4.4.0_p20110410.ebuild 1224 RMD160 354b8638b5fe0b7ceef7c29c56c84037ce66522b SHA1 5054cca76d3ad9b1ff235cfd6fb36b9a06e3096d SHA256 7035d465666b5fdf712e3c26a0c88bff532320ba99b6cc7731a813f7e62e5379
-MISC ChangeLog 2479 RMD160 b2acadb7e025845965f329e5ee27c6fb3055b6e1 SHA1 1a3836ce1842fc42e57fc7f84b9cef89a2095e93 SHA256 43385c8acc19102ad13ebfe1cad253f2d5a4cf281797b160cd328fa1f2ab99f1
+EBUILD knetworkmanager-4.4.0_p20110415.ebuild 1115 RMD160 2e9791658f95f02b2fea6919e5f7ae101b19f60a SHA1 b3c1dbe0e0c518000e55bc20af1f53b9cc50d185 SHA256 986fae0efedf3a14895289ff56085cb1061a89949098ba81c5d7c2b177f7a873
+MISC ChangeLog 2855 RMD160 e58db82344975b26f424a18fd1c44cb1adf4c26f SHA1 07c01de1c6b82290a7274f2eeed5c436b524da02 SHA256 bf985d462f5f7d79be4629b18b26cc67e4377ae753e08561adb33d5280de15e4
 MISC metadata.xml 301 RMD160 3e2112d23805982b5fc816bc6fef1f71b4415a2b SHA1 9bb446718c9b5a238a218ee744b0fea754b68ef1 SHA256 a24dfda69e4b52de8c2d46c361a6855da37e98afbd0c6f13e34149c7c0e01ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2oSs8ACgkQHB6c3gNBRYdvBwCgxAKre3++J3FC1rexRY1ChDN7
+sQIAniN8OcCoNxBGoJ9I5xpLoc0hTY+Y
+=Xj2O
+-----END PGP SIGNATURE-----
